Display detailed message from the process on error